[gd_scene load_steps=2 format=3 uid="uid://reward_overlay_scene"]

[ext_resource type="Script" path="res://scenes/ui/RewardOverlay.gd" id="1_reward"]

[node name="RewardOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_reward")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="RewardsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RewardButton1" type="Button" parent="RewardsContainer"]
layout_mode = 2
text = "Reward 1"

[node name="RewardButton2" type="Button" parent="RewardsContainer"]
layout_mode = 2
text = "Reward 2"

[node name="RewardButton3" type="Button" parent="RewardsContainer"]
layout_mode = 2
text = "Reward 3"
